# wikihops

./: .gitignore  Makefile  README.md  add_tokens.py  pyproject.toml
wikihops/: articles.py  chain_examples.py  cli.py  combine.py  diagnose_tokenizer.py  eval_zero_hop.py  pretrain.py  qa.py  seed.py  test_token_formats.py  token_mod.py  train.py  upload_to_hf.py  utils.py
wikihops/data/seed/: world.json
wikihops/final_datasets/: articles.json  stories.json
